fixing the z-index of the form(Check Availability), and also making change to the JavaScript file

--- a/html-source/static/css/stylesheet.css
+++ b/html-source/static/css/stylesheet.css
@@ -10,3 +10,7 @@
     color: #f6f6f6;
     font-size: 80%;
 }
+
+div.swal2-actions {
+    z-index: 0; !important;
+}
